@@ -8,6 +8,7 @@
 * Add - Add filter call when updating an existent intent (wc_stripe_update_existing_intent_request).
 * Add - Add ability to test Stripe account keys' validity.
 * Fix - Fixed full bank statement field description.
+* Fix - Notification messages are placed on top of the account keys modal.
 
 = 6.0.0 - 2022-01-05 =
 * Fix - Fixed capitalization for payment method names: iDEAL, giropay, and Sofort.
